Prevent text wrapping in Gantt hover tooltips

--- a/styles/web/common/gantt.less
+++ b/styles/web/common/gantt.less
@@ -602,6 +602,7 @@
 {
     padding: .4em;
     text-align: left;
+    white-space: nowrap;
 }
 
 .k-task-details > strong
